--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ license = "EUPL-1.2"
 
 [dependencies]
 tokio = { version = "1.19.0", features = ["full"] }
-tui = "0.18"
+ratatui = "0.27.0"
+#ratatui = { path = "/tmp/ratatui" }
 crossterm = "0.23"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 anyhow = "1"
@@ -14,7 +15,7 @@ clap = { version = "3", features = ["cargo", "env", "wrap_help"] }
 log = "0.4"
 log4rs = "1.0"
 regex = "1.5"
-tui-tree-widget = "0.9"
+tui-tree-widget = "0.21"
 chrono = "0.4"
 
 [dev-dependencies]
