--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "prom-tui"
+name = "promviz"
 version = "0.1.0"
 edition = "2021"
+license = "EUPL-1.2"
 
 [dependencies]
 tokio = { version = "1.19.0", features = ["full"] }
