--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ ratatui = "0.27.0"
 crossterm = "0.27"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 anyhow = "1"
-clap = { version = "4", features = ["cargo", "env", "wrap_help"] }
+clap = { version = "4", features = ["derive", "cargo", "env", "wrap_help"] }
 log = "0.4"
 log4rs = "1.3"
 regex = "1.10"
