--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,5 +20,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Run benchmark tests
-      run: cargo bench --verbose
+#    - name: Run benchmark tests
+#      run: cargo bench --verbose
